# mishalaboobackar.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  about.qmd  index.html  index.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
_site/: about.html  index.html
