[project]
name = "mishalaboobackar-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "Mishal Aboobackar Manalody",email = "mishaaal@bu.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "mishalaboobackar"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
